force-app/main/default/objects/Customer_Information_Sheet__c/fields/No_6_pin_Units_Sold_PP804879__c.field-meta.xml
<CustomField>
    <fullName>No_6_pin_Units_Sold_PP804879__c</fullName>
    <defaultValue>0</defaultValue>
    <label># 6-pin Units Sold (PP804879):</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>