force-app/main/default/objects/Customer_Information_Sheet__c/fields/No_9_pin_Units_Sold_PP804880__c.field-meta.xml
<CustomField>
    <fullName>No_9_pin_Units_Sold_PP804880__c</fullName>
    <defaultValue>0</defaultValue>
    <label># 9-pin Units Sold (PP804880)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>