force-app/main/default/objects/Customer_Information_Sheet__c/fields/No_of_Bag_Units_Sold_PP804980__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bag_Units_Sold_PP804980__c</fullName>
    <defaultValue>0</defaultValue>
    <label># of Bag Units Sold (PP804980):</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>