force-app/main/default/objects/Customer_Information_Sheet__c/fields/Number_of_Inventory_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Inventory_Records__c</fullName>
    <label>Number of Inventory Records</label>
    <summaryForeignKey>CIS_Inventory_Detail__c.Customer_Information_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>