force-app/main/default/objects/Customer_Information_Sheet__c/fields/Number_of_Pana_Emails__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pana_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times the NCIS form has been emailed to PANA.</description>
    <label>Number of Pana Emails</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>