force-app/main/default/objects/Customer_Information_Sheet__c/fields/Partner_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_Link__c</fullName>
    <label>Partner Portal Link</label>
    <type>Url</type>
</CustomField>