force-app/main/default/objects/Customer_Information_Sheet__c/fields/Potential_Contract_Size__c.field-meta.xml
<CustomField>
    <fullName>Potential_Contract_Size__c</fullName>
    <label>Potential Contract Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>