force-app/main/default/objects/Customer_Information_Sheet__c/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <formula>Primary_Contact__r.FirstName + &apos; &apos; + Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>