force-app/main/default/objects/Customer_Information_Sheet__c/fields/Primary_Contact_S2S__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_S2S__c</fullName>
    <label>Primary Contact S2S</label>
    <length>225</length>
    <type>Text</type>
</CustomField>