force-app/main/default/objects/Customer_Information_Sheet__c/fields/PTO_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>PTO_Vehicle_Type__c</fullName>
    <inlineHelpText>If the trucks are equipped with Power Take Offs (PTO) and plan to track PTO fuel usage, Please, specify the type of vehicles running PTO.</inlineHelpText>
    <label>PTO Vehicle Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>