force-app/main/default/objects/Customer_Information_Sheet__c/fields/Purchase_Location__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Location__c</fullName>
    <label>Purchase Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>