force-app/main/default/objects/Customer_Information_Sheet__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order #</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>