force-app/main/default/objects/Customer_Information_Sheet__c/fields/QC_Unit__c.field-meta.xml
<CustomField>
    <fullName>QC_Unit__c</fullName>
    <label>Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>MCP100S</fullName>
            </value>
            <value>
                <fullName>MCP100T</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200 SDM</fullName>
            </value>
            <value>
                <fullName>MCP200T - 16G</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>TM</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
            <value>
                <fullName>XRS - Android</fullName>
            </value>
            <value>
                <fullName>XRS – WinMo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>