force-app/main/default/objects/Customer_Information_Sheet__c/fields/QTRACS_Software__c.field-meta.xml
<CustomField>
    <fullName>QTRACS_Software__c</fullName>
    <label>QTRACS Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>