force-app/main/default/objects/Customer_Information_Sheet__c/fields/Remove_Replace_Existing_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Remove_Replace_Existing_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove and Replace Existing Equipment</label>
    <type>Checkbox</type>
</CustomField>