force-app/main/default/objects/Customer_Information_Sheet__c/fields/Sell_Out_of_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Sell_Out_of_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do You Sell Out of Inventory?</label>
    <type>Checkbox</type>
</CustomField>