force-app/main/default/objects/Customer_Information_Sheet__c/fields/Selling_Points__c.field-meta.xml
<CustomField>
    <fullName>Selling_Points__c</fullName>
    <label>Selling Points</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>