force-app/main/default/objects/Customer_Information_Sheet__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <label>Service Plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EOBR Plan</fullName>
            </value>
            <value>
                <fullName>CORE Plan</fullName>
            </value>
            <value>
                <fullName>Compliance Plan</fullName>
            </value>
            <value>
                <fullName>Performance Plan</fullName>
            </value>
            <value>
                <fullName>Premium Plan</fullName>
            </value>
            <value>
                <fullName>Premium Trip Manager Plan</fullName>
            </value>
            <value>
                <fullName>XRS Relay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>