force-app/main/default/objects/Customer_Information_Sheet__c/fields/Service_Plan_Term__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan_Term__c</fullName>
    <label>Service Plan Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>