force-app/main/default/objects/Customer_Information_Sheet__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advance Mapping</fullName>
            </value>
            <value>
                <fullName>ALK CoPilot</fullName>
            </value>
            <value>
                <fullName>Amber Alert</fullName>
            </value>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>CER - FCW/FTV</fullName>
            </value>
            <value>
                <fullName>CER Video</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>Critical Event Reporting</fullName>
            </value>
            <value>
                <fullName>Driver Login</fullName>
            </value>
            <value>
                <fullName>Driver Notification Service</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>Hazmat</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
            <value>
                <fullName>In-Cab Scanning</fullName>
            </value>
            <value>
                <fullName>Lane Departure</fullName>
            </value>
            <value>
                <fullName>Mobileye</fullName>
            </value>
            <value>
                <fullName>Navigo Fuel</fullName>
            </value>
            <value>
                <fullName>Navigo Route compliance</fullName>
            </value>
            <value>
                <fullName>Nav - Maptuit</fullName>
            </value>
            <value>
                <fullName>Omnitracs Navigation</fullName>
            </value>
            <value>
                <fullName>Per Diem</fullName>
            </value>
            <value>
                <fullName>Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>Pre-filled macros</fullName>
            </value>
            <value>
                <fullName>QTRACS</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS</fullName>
            </value>
            <value>
                <fullName>Trip Manager</fullName>
            </value>
            <value>
                <fullName>Vehicle Command &amp; Control</fullName>
            </value>
            <value>
                <fullName>Vehicle Maintenance</fullName>
            </value>
            <value>
                <fullName>VIR</fullName>
            </value>
            <value>
                <fullName>Virtual Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>