force-app/main/default/objects/Customer_Information_Sheet__c/fields/Ship_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Ship_Schedule__c</fullName>
    <label>Ship Schedule</label>
    <type>TextArea</type>
</CustomField>