force-app/main/default/objects/Customer_Information_Sheet__c/fields/Shipping_City1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City1__c</fullName>
    <description>Non-Formula Shipping Address</description>
    <label>Shipping City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>