force-app/main/default/objects/Customer_Information_Sheet__c/fields/Shipping_Country1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country1__c</fullName>
    <description>Non-Formula Shipping Country</description>
    <label>Shipping Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>