force-app/main/default/objects/Customer_Information_Sheet__c/fields/Shipping_State_Province1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province1__c</fullName>
    <description>Non-Formula Shipping State/Province</description>
    <label>Shipping State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>