force-app/main/default/objects/Customer_Information_Sheet__c/fields/Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province__c</fullName>
    <formula>Account__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State/Province</label>
    <type>Text</type>
</CustomField>