force-app/main/default/objects/Customer_Information_Sheet__c/fields/Shipping_Street1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street1__c</fullName>
    <description>Non-Formula Shipping Street</description>
    <label>Shipping Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>