force-app/main/default/objects/Customer_Information_Sheet__c/fields/Shipping_Zip_Postal_Code1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Postal_Code1__c</fullName>
    <description>Non-Formula Shipping Zip/Postal Code</description>
    <label>Shipping Zip/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>