force-app/main/default/objects/Customer_Information_Sheet__c/fields/Shipping_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Postal_Code__c</fullName>
    <formula>Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Zip/Postal Code</label>
    <type>Text</type>
</CustomField>