force-app/main/default/objects/Customer_Information_Sheet__c/fields/Shop_Contact__c.field-meta.xml
<CustomField>
    <fullName>Shop_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>New_Customer_Information_Sheets3</relationshipName>
    <type>Lookup</type>
</CustomField>