force-app/main/default/objects/Customer_Information_Sheet__c/fields/Shop_Contact_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Shop_Contact_s_Email__c</fullName>
    <formula>Shop_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop Contact&apos;s Email</label>
    <type>Text</type>
</CustomField>