force-app/main/default/objects/Customer_Information_Sheet__c/fields/Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Status_Formula__c</fullName>
    <formula>IF(  Sell_Out_of_Inventory__c &amp;&amp; Number_of_Inventory_Records__c ==0,&apos;Incomplete&apos;,&apos;Completed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>