force-app/main/default/objects/Customer_Information_Sheet__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Newfoundland</fullName>
            </value>
            <value>
                <fullName>Atlantic</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Pacific</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>