force-app/main/default/objects/Customer_Information_Sheet__c/fields/TMS_Solutions__c.field-meta.xml
<CustomField>
    <fullName>TMS_Solutions__c</fullName>
    <description>Is there a solution in place for the Customer interested in adding TMS</description>
    <inlineHelpText>Is there a solution in place for the Customer interested in adding TMS</inlineHelpText>
    <label>TMS Solutions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>