force-app/main/default/objects/Customer_Information_Sheet__c/fields/Total_of_Customer_Domiciles__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Customer_Domiciles__c</fullName>
    <label>Total # of Customer Domiciles</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>