force-app/main/default/objects/Customer_Information_Sheet__c/fields/Trailer_Type__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Type__c</fullName>
    <label>Trailer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Reefer</fullName>
            </value>
            <value>
                <fullName>Tank</fullName>
            </value>
            <value>
                <fullName>Flatbed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>