force-app/main/default/objects/Customer_Information_Sheet__c/fields/Trigger_Email__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Email</label>
    <type>Checkbox</type>
</CustomField>