force-app/main/default/objects/Customer_Information_Sheet__c/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <label>Type of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building Materials</fullName>
            </value>
            <value>
                <fullName>Bulk Commodities</fullName>
            </value>
            <value>
                <fullName>Cement Hauler</fullName>
            </value>
            <value>
                <fullName>Forest Products</fullName>
            </value>
            <value>
                <fullName>Household Goods</fullName>
            </value>
            <value>
                <fullName>Auto Haulers</fullName>
            </value>
            <value>
                <fullName>Freight Delivery (LTL)</fullName>
            </value>
            <value>
                <fullName>Refrigerated Liquids</fullName>
            </value>
            <value>
                <fullName>Tank Truck</fullName>
            </value>
            <value>
                <fullName>Food &amp; Bev Distribution</fullName>
            </value>
            <value>
                <fullName>General Freight (TL)</fullName>
            </value>
            <value>
                <fullName>Hazardous Products</fullName>
            </value>
            <value>
                <fullName>Heavy Hauling</fullName>
            </value>
            <value>
                <fullName>Petroleum Products</fullName>
            </value>
            <value>
                <fullName>Refrigerated Solids</fullName>
            </value>
            <value>
                <fullName>Food Products (Grocery)</fullName>
            </value>
            <value>
                <fullName>Mfg. &amp; Processing</fullName>
            </value>
            <value>
                <fullName>Petroleum Production &amp; Distribution</fullName>
            </value>
            <value>
                <fullName>Retail/Wholesale</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>