force-app/main/default/objects/Customer_Information_Sheet__c/fields/Type_of_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fleet__c</fullName>
    <inlineHelpText>Company O/O and %)</inlineHelpText>
    <label>Type of Fleet</label>
    <type>TextArea</type>
</CustomField>