force-app/main/default/objects/Customer_Information_Sheet__c/fields/Unit_Install__c.field-meta.xml
<CustomField>
    <fullName>Unit_Install__c</fullName>
    <label>Unit Install</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Crew</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>