force-app/main/default/objects/Customer_Information_Sheet__c/fields/Unit_Installation__c.field-meta.xml
<CustomField>
    <fullName>Unit_Installation__c</fullName>
    <label>Unit Installation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Installation Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>