force-app/main/default/objects/Customer_Information_Sheet__c/fields/Units_Sold_or_Evaluating__c.field-meta.xml
<CustomField>
    <fullName>Units_Sold_or_Evaluating__c</fullName>
    <label># Units Sold or Evaluating</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>