force-app/main/default/objects/Customer_Information_Sheet__c/fields/Who_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Who_to_Contact__c</fullName>
    <formula>Account__r.RecordOwner__r.FirstName + &apos;  &apos; +  Account__r.RecordOwner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Who to Contact</label>
    <type>Text</type>
</CustomField>