force-app/main/default/objects/Customer_Information_Sheet__c/fields/Will_In_Outbound_form_messaging_be_used__c.field-meta.xml
<CustomField>
    <fullName>Will_In_Outbound_form_messaging_be_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will In/Outbound Form Messaging be used?</label>
    <type>Checkbox</type>
</CustomField>