force-app/main/default/objects/Customer_Information_Sheet__c/fields/Will_XRS_be_used_for_Fuel_Tax_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Will_XRS_be_used_for_Fuel_Tax_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will XRS be used for Fuel Tax Reporting?</label>
    <type>Checkbox</type>
</CustomField>