force-app/main/default/objects/Customer_Information_Sheet__c/fields/XRS_Comments__c.field-meta.xml
<CustomField>
    <fullName>XRS_Comments__c</fullName>
    <defaultValue>&quot;Hours of Service:&quot;&amp; BR() &amp;
&quot;Which HOS rules are used (Federal, State, Canadian):&quot;&amp; BR() &amp;
&quot;If using state rules, which state rule is used (enter all States that apply):&quot;&amp; BR() &amp;
&quot;Are multiple authorities used?&quot;&amp; BR() &amp;
&quot;Are team drivers used?&quot;&amp; BR() &amp;
&quot;Is personal conveyance used by drivers?&quot;&amp; BR() &amp;
&quot;Are drivers involved with short-haul operations (100 air-mile exemption)?&quot;&amp; BR() &amp;
&quot;Is Sleeper Birth Required?&quot;&amp; BR() &amp;
BR() &amp;
&quot;XRS Information:&quot;&amp; BR() &amp;
&quot;Will the XRS website be used for fuel tax reporting?&quot;&amp; BR() &amp;
&quot;Will XRS inbound and outbound forms messaging be used?&quot;&amp; BR() &amp;
BR() &amp;
&quot;Installation Considerations:&quot;&amp; BR() &amp;
&quot;Will power take off (PTO) usage be tracked on your vehicles?&quot;&amp; BR() &amp;
&quot;Are there vehicles without an engine control module (ECM) (i.e. Typically Class 8 vehicles made prior to 1995)?&quot;&amp; BR() &amp;
&quot;Are there light duty vehicles that require OBDII converters?&quot;&amp; BR() &amp;
BR() &amp;
&quot;Professional Service:&quot;&amp; BR() &amp;
&quot;Does customer have 3rd Party Software (i.e. TMS, Fuel Purchase, IFTA, etc. Please list each Application that applies)?&quot;&amp; BR() &amp;
&quot;Will web services be used for integration?&quot;&amp; BR() &amp;
&quot;Will planned routes be imported for drivers to download?&quot;&amp; BR() &amp;
&quot;Is Navigation a need at this account?&quot;&amp; BR() &amp;
&quot;Is onsite training required?&quot;&amp; BR() &amp;
BR() &amp;
&quot;Miscellaneous Information:&quot;</defaultValue>
    <label>XRS Comments</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>