force-app/main/default/objects/Customer_Information_Sheet__c/recordTypes/Direct_CIS.recordType-meta.xml
<RecordType>
    <fullName>Direct_CIS</fullName>
    <active>true</active>
    <description>NCIS record type for direct</description>
    <label>Direct CIS</label>
</RecordType>