force-app/main/default/objects/Customer_Information_Sheet__c/recordTypes/Partner_CIS.recordType-meta.xml
<RecordType>
    <fullName>Partner_CIS</fullName>
    <active>true</active>
    <description>NCIS record type for indirect</description>
    <label>Partner CIS</label>
</RecordType>