force-app/main/default/objects/Customer_Information_Sheet__c/listViews/All_CIS.listView-meta.xml
<ListView>
    <fullName>All_CIS</fullName>
    <columns>NAME</columns>
    <columns>Cust_ID__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>District__c</columns>
    <columns>Units_Sold_or_Evaluating__c</columns>
    <columns>Potential_Contract_Size__c</columns>
    <columns>Decision_Maker__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All CIS</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>